# quick-microservice-rs

./: .dockerignore  .env  .env.test  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  configure-local.sh  diesel.toml  docker-compose.yml  migrate.sh  prepare.sh  release.sh  revert.sh  run-local.sh  rust-toolchain.toml  setup.sh
crates/customer/: Cargo.toml
crates/customer/.sqlx/: query-0020ef2a34173487870cdea84eb5c5b95bff24eb4da35502ab3b621900769856.json  query-0323e3b378f1c3c3922259d60e7191b813614b2317e1cda0bf7e2e472a56b056.json  query-1bc27c3b237cf98bb6bd7e30bc7bc01bb7ac71af7b09d75224bb6c380caf1f28.json  query-26ac61b248032af0891f3f52af9de630e0264c72b875409c6167046ba082eb75.json  query-38b96920ac6a8e7631e4a042a4f8e9a380befb5d546c08fdff951650c1c257f9.json  query-401d6049c549e38c58e2c2eaf4e3cb8bb63475c050f27b35a382c6349482b6f6.json  query-40af60cef08d3f0551953d5fb5f89932cc84c14c6851b8e8526617710bac4290.json  query-40c6bc9555740c188cab9bf56e62f7395ad16040e052912157c90f275d6d0d75.json  query-53b44636f542bfc67d14270faa4443e09acf35e8efb0c3f9a931e9621c5fdfa4.json  query-5a97cd0d57a3c9e6162da92bad72b0fe349b90b89d50a6d63dc1304e0f06b27a.json  query-64bd1f49c2ca74ecd1aaae069f8ce730989db5b767483bfc810b0f008a63fd11.json  query-6ab053934799a5e1b5c8c902435dcd4faad549cbbd114f0eaf30d40e811a0d53.json  query-6d247e9d19b9b81dab1426dc32834aec4f4285e75c16ac2e73b276594c523a07.json  query-75c50a43c94d563806e4ae87e61d38863c4ef0aa3322c62c4f82b5bf10e539ec.json  query-8094328a1334a958f345d54fd0434dd85c32df2180c0e50e9e7900e08e7178c7.json  query-82469faea6c8726b13513902d9ce0564c555e64aea4f0e6f779095cbef81f38b.json  query-85032552952122accd692160236a68351717b729bebfbdcad5f6482a3cc7b5d0.json  query-8ac63f2382c2474508e052d41c8c1b2d433bb1f6cf3197ece6fb87fa66692dc6.json  query-8ed089051f3ec450d9c65dabf55bce697ebdde7de6fe9caa984e2aa667782c08.json  query-90981708ac998584fca6d04c78c3dc806670ff93c81281d2358dbbbf5da2741f.json  query-9feea2d44bcae5eb6fbf26c3a38870c0c8cbedfd7d12a3070bec21973882e58f.json  query-a518fb4436e534514b9cd60d129aa2e9d58e2a7bd7df29465638af76a5c47467.json  query-b488bdfb5514cbac9e39cbbdd23b16a58f82d90a8bcc90ca8aa50ec1b6abc009.json  query-b65ab8ab6b72e4ed99ac9e7b535ccb20d7527b9c92cce531b75f79cd93e79d2d.json  query-c62ce320b9fea7ab71c0890fb848cbf053e2ef66c17e2d92bde0c617e51bcf8d.json  query-e03a71bc7f7307e84b59d4841d81529fa1da54a810e86644a9a9250b601ce954.json  query-e3d58f1d5489837991c23c845a7cb741228c12bbb684cf4391654a970d7746df.json  query-eab36c703c1435ee0aefb8f43fb8c9ba788d8e227627abec5a826d247aa78e07.json  query-f2be1b4e90d5fb0fc609060fbc18184c74412e2ac4ce045e3e793f667d632bc1.json  query-f69d5bde6998321676ac1e64b326b32fbc3213f7efb4334cec39f771c65bd28d.json  query-fb2a3888b937cc3a30408b00034b2a1463b1964f0733f3694b24dcd6d1a17624.json  query-fb7329d7fd464e972d01556769a4a4df3169c5e82406ee10fa304a25b7947cab.json
crates/customer/migrations/customer/: 20240325153410_customers.down.sql  20240325153410_customers.up.sql  20240325153411_organizations.down.sql  20240325153411_organizations.up.sql  20240325153413_institutions.down.sql  20240325153413_institutions.up.sql  20240325153420_organization_units.down.sql  20240325153420_organization_units.up.sql  20240325153726_organization_unit_members.down.sql  20240325153726_organization_unit_members.up.sql  20240325153923_customers-trigger.down.sql  20240325153923_customers-trigger.up.sql  20240325153929_organizations-trigger.down.sql  20240325153929_organizations-trigger.up.sql  20240325154000_institutions-trigger.down.sql  20240325154000_institutions-trigger.up.sql  20240325154003_organization_units-trigger.down.sql  20240325154003_organization_units-trigger.up.sql  20240325154014_organization_unit_members-trigger.down.sql  20240325154014_organization_unit_members-trigger.up.sql  20240325170835_edge-gram-tsvector.down.sql  20240325170835_edge-gram-tsvector.up.sql
crates/customer/migrations/keycloak/: 20240325152407_uuid-ext.down.sql  20240325152407_uuid-ext.up.sql  20240325152544_realm-trigger.down.sql  20240325152544_realm-trigger.up.sql  20240325153038_user_entity-trigger.down.sql  20240325153038_user_entity-trigger.up.sql  (+12 more)
crates/customer/src/: cleanup.rs  config.rs  context.rs  groups.rs  lib.rs  marker.rs  mutation.rs  query.rs  roles.rs  worker.rs
crates/customer/src/cache/: customer.rs  (+4 more)
crates/entity/: Cargo.toml  README.md
crates/entity-derive/: Cargo.toml
crates/entity-derive/src/: lib.rs  m2m.rs  o2m.rs  o2o.rs
crates/entity/src/: ctx.rs  error.rs  ids.rs  lib.rs  list.rs  model.rs  owned.rs  utils.rs
crates/kafka/: Cargo.toml  README.md
crates/kafka/src/: config.rs  lib.rs  producer.rs  topics.rs
crates/keycloak/: Cargo.toml  README.md
crates/keycloak/src/: client.rs  config.rs  lib.rs  realm.rs  schema.rs  session.rs
crates/keycloak/templates/: realm.json
crates/mongodb/: Cargo.toml  README.md
crates/mongodb/src/: config.rs  db.rs  lib.rs
crates/nats/: Cargo.toml
crates/nats/src/: communal.rs  lib.rs  subject.rs
crates/pg/: Cargo.toml  README.md
crates/pg/src/: config.rs  db.rs  lib.rs  setup.rs
crates/redis/: Cargo.toml  README.md
crates/redis/src/: config.rs  lib.rs  lock.rs  work_queue.rs
crates/role/: Cargo.toml  README.md
crates/role-build/: Cargo.toml
crates/role-build/src/: lib.rs  model.rs  parser.rs  reader.rs  writer.rs
crates/role/src/: lib.rs
crates/s3/: Cargo.toml
crates/s3/src/: lib.rs
crates/server/: Cargo.toml  README.md
crates/server/src/: config.rs  lib.rs
crates/utils/: Cargo.toml
crates/utils-derive/: Cargo.toml
crates/utils-derive/src/: cheap_clone.rs  lib.rs
crates/utils/src/: lib.rs
examples/auth/: Cargo.toml  build.rs
examples/auth/src/: lib.rs  roles.rs
examples/auth/templates/: roles.md
examples/cli/: Cargo.toml
examples/cli/src/: main.rs
examples/ctx/: Cargo.toml
examples/ctx/src/: lib.rs
examples/model/: Cargo.toml
examples/model/src/: lib.rs
examples/server/: Cargo.toml  build.rs
examples/server/src/: lib.rs  main.rs  roles.rs  schema.rs
examples/server/templates/: roles.md
examples/server/tests/: integration_test.rs
(+119 files in other folders)
