
[workspace]
resolver = "3"
members = ["crates/*", "examples/*"]

[workspace.package]
edition = "2024"
version = "0.0.64"
rust-version = "1.87.0"
authors = ["Jürgen Seitz <juergen.seitz@h-d-gmbh.de>"]
license = "MIT"
repository = "https://github.com/hd-gmbh-dev/quick-microservice-rs"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.88"
async-nats = "0.44.2"
axum = "0.8.6"
tynm = "0.2.0"
base64 = "0.22.1"
constcat = "0.6.0"
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.31"
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
thiserror = "2.0.17"
itertools = "0.14.0"
envy = "0.4.2"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.140"
keycloak = { version = "~26.4.0", default-features = false, features = [
    "multipart",
    "resource-builder",
    "tag-authentication-management",
    "tag-client-scopes",
    "tag-clients",
    "tag-component",
    "tag-groups",
    "tag-identity-providers",
    "tag-protocol-mappers",
    "tag-realms-admin",
    "tag-role-mapper",
    "tag-roles",
    "tag-roles-by-id",
    "tag-users",
] }
mongodb = "3.2.3"
lazy_static = "1.5.0"
tracing = "0.1.40"
strum = { version = "0.27.2", features = ["derive"] }
redis = { version = "0.32.7", features = ["tokio-comp", "json"] }
deadpool-redis = "0.22.0"
uuid = { version = "1.16.0", features = ["v4", "v7"] }
glob = "0.3.1"
async-graphql-axum = "7.0.17"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "time",
] }
time = { version = "0.3.44", features = [
    "formatting",
    "parsing",
    "macros",
    "serde",
] }
Inflector = "0.11.4"
async-graphql = { version = "7.0.17", features = [
    "bson",
    "chrono",
    "chrono-tz",
    "uuid",
    "graphiql",
    "time",
] }
prometheus-client = "0.24.0"
rdkafka = { version = "0.37" }

hex = "0.4.3"
serde_with = "3.15.0"
sea-orm = { version = "1.1.17", default-features = false, features = [
    "sqlx-postgres",
] }

qm-entity = { path = "crates/entity", version = "0.0.64" }
qm-entity-derive = { path = "crates/entity-derive", version = "0.0.64" }
qm-server = { path = "crates/server", version = "0.0.64" }
qm-mongodb = { path = "crates/mongodb", version = "0.0.64" }
qm-pg = { path = "crates/pg", version = "0.0.64" }
qm-redis = { path = "crates/redis", version = "0.0.64" }
qm-s3 = { path = "crates/s3", version = "0.0.64" }
qm-kafka = { path = "crates/kafka", version = "0.0.64" }
qm-nats = { path = "crates/nats", version = "0.0.64" }
qm-keycloak = { path = "crates/keycloak", version = "0.0.64" }
qm-role = { path = "crates/role", version = "0.0.64" }
qm-role-build = { path = "crates/role-build", version = "0.0.64" }
qm-utils = { path = "crates/utils", version = "0.0.64" }
qm-utils-derive = { path = "crates/utils-derive", version = "0.0.64" }
qm = { path = ".", default-features = false, version = "0.0.64" }


[package]
name = "qm"
description = "Utilities for quick microservices in Rust"
edition = "2024"
rust-version = "1.87.0"
version.workspace = true
authors = ["Jürgen Seitz <juergen.seitz@h-d-gmbh.de>"]
license = "MIT"
repository = "https://github.com/hd-gmbh-dev/quick-microservice-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qm-entity = { workspace = true, optional = true }
qm-server = { workspace = true, optional = true }
qm-mongodb = { workspace = true, optional = true }
qm-redis = { workspace = true, optional = true }
qm-pg = { workspace = true, optional = true }
qm-nats = { workspace = true, optional = true }
qm-s3 = { workspace = true, optional = true }
qm-kafka = { workspace = true, optional = true }
qm-keycloak = { workspace = true, optional = true }
qm-role = { workspace = true, optional = true }
qm-role-build = { workspace = true, optional = true }
qm-utils = { workspace = true, optional = true }

[features]
default = [
    # "entity",
    # "server",
    # "mongodb",
    # "redis",
    # "pg",
    # "s3",
    # "kafka",
    # "keycloak",
    # "role",
    # "role-build",
    # "utils",
]
entity = ["qm-entity"]
server = ["qm-server"]
mongodb = ["qm-mongodb"]
redis = ["qm-redis"]
pg = ["qm-pg"]
s3 = ["qm-s3"]
kafka = ["qm-kafka"]
nats = ["qm-nats"]
keycloak = ["qm-keycloak"]
role = ["qm-role"]
role-build = ["qm-role-build"]
utils = ["qm-utils"]
serde-str = ["qm-entity?/serde-str", "qm-role?/serde-str"]
