[package]
name = "qm-customer"
description = "Default schema for customers"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-graphql.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tynm.workspace = true
futures.workspace = true
tokio.workspace = true
log.workspace = true
prometheus-client.workspace = true
deadpool-redis.workspace = true
strum.workspace = true
envy.workspace = true

qm-mongodb.workspace = true
qm-kafka.workspace = true
qm-keycloak.workspace = true
qm-entity.workspace = true
qm-redis.workspace = true
qm-role.workspace = true