[package]
name = "qm-customer"
description = "Default schema for customers"
edition = "2021"
rust-version = "1.75.0"
version.workspace = true
authors = ["Jürgen Seitz <juergen.seitz@h-d-gmbh.de>"]
license = "MIT"
repository = "https://github.com/hd-gmbh-dev/quick-microservice-rs"
include = ["/src", "/migrations", "/.sqlx"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-graphql.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tynm.workspace = true
futures.workspace = true
tokio.workspace = true
log.workspace = true
prometheus-client.workspace = true
deadpool-redis.workspace = true
strum.workspace = true
envy.workspace = true
itertools.workspace = true
constcat.workspace = true
lazy_static.workspace = true
sqlx.workspace = true
time.workspace = true
Inflector.workspace = true
qm-mongodb.workspace = true
qm-kafka.workspace = true
qm-keycloak.workspace = true
qm-entity.workspace = true
qm-redis.workspace = true
qm-role.workspace = true
qm-pg.workspace = true