[package]
name = "qm-entity-derive"
description = "Proc macros to generate entities and relations"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
Inflector = "0.11.4"
darling = "0.20.1"
proc-macro-crate = "3.1.0"
proc-macro2 = "1.0.24"
quote = "1.0.9"
syn = { version = "2.0", features = [
  "full",
  "extra-traits",
  "visit-mut",
  "visit",
] }
strum = { version = "0.25.0", features = ["derive"] }
lazy_static = "1.4.0"
