[package]
name = "qm-entity"
description = "Entity management"
edition = "2021"
rust-version.workspace = true
version.workspace = true
authors = ["Jürgen Seitz <juergen.seitz@h-d-gmbh.de>"]
license = "MIT"
repository = "https://github.com/hd-gmbh-dev/quick-microservice-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
async-graphql.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
futures.workspace = true
chrono.workspace = true
tynm.workspace = true
reqwest.workspace = true
tracing.workspace = true
sqlx.workspace = true
hex.workspace = true
sea-orm.workspace = true
qm-redis.workspace = true
qm-keycloak.workspace = true
qm-role.workspace = true
qm-mongodb.workspace = true
qm-nats.workspace = true
qm-entity-derive.workspace = true