[package]
name = "qm-kafka"
description = "Kafka helper functions"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
envy.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
rdkafka.workspace = true