[package]
name = "qm-keycloak"
description = "Keycloak helper functions"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
chrono.workspace = true
keycloak.workspace = true
async-trait.workspace = true
envy.workspace = true
glob.workspace = true
lazy_static.workspace = true
async-graphql.workspace = true
log.workspace = true
base64.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
qm-role.workspace = true