[package]
name = "qm-keycloak"
description = "Keycloak helper functions"
edition = "2021"
rust-version = "1.75.0"
version.workspace = true
authors = ["Jürgen Seitz <juergen.seitz@h-d-gmbh.de>"]
license = "MIT"
repository = "https://github.com/hd-gmbh-dev/quick-microservice-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
chrono.workspace = true
keycloak.workspace = true
async-trait.workspace = true
envy.workspace = true
glob.workspace = true
lazy_static.workspace = true
async-graphql.workspace = true
tracing.workspace = true
base64.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
qm-role.workspace = true