[package]
name = "qm-mongodb"
description = "MongoDB helper functions"
edition = "2021"
rust-version = "1.82.0"
version.workspace = true
authors = ["Jürgen Seitz <juergen.seitz@h-d-gmbh.de>"]
license = "MIT"
repository = "https://github.com/hd-gmbh-dev/quick-microservice-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
envy.workspace = true
futures.workspace = true
tracing.workspace = true
mongodb.workspace = true
serde.workspace = true
tokio.workspace = true
