[package]
name = "qm-nats"
description = "Nats helper functions"
edition = "2021"
rust-version.workspace = true
version.workspace = true
authors = ["Jürgen Seitz <juergen.seitz@h-d-gmbh.de>"]
license = "MIT"
repository = "https://github.com/hd-gmbh-dev/quick-microservice-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true
envy.workspace = true
sqlx.workspace = true
async-nats.workspace = true
async-graphql.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
futures.workspace = true
sea-orm.workspace = true
strum.workspace = true
tokio.workspace = true