[package]
name = "qm-pg"
description = "PostgreSQL helper functions"
edition = "2021"
rust-version = "1.75.0"
version.workspace = true
authors = ["Jürgen Seitz <juergen.seitz@h-d-gmbh.de>"]
license = "MIT"
repository = "https://github.com/hd-gmbh-dev/quick-microservice-rs"
include = ["/src", "/migrations", "/.sqlx"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
envy.workspace = true
sqlx.workspace = true
sea-orm.workspace = true
tracing.workspace = true
anyhow.workspace = true