[package]
name = "qm-redis"
description = "Redis helper functions"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
envy.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
futures.workspace = true
thiserror.workspace = true
redis.workspace = true
tokio.workspace = true
deadpool-redis.workspace = true
uuid.workspace = true