[package]
name = "qm-redis"
description = "Redis helper functions"
edition = "2021"
rust-version = "1.75.0"
version.workspace = true
authors = ["Jürgen Seitz <juergen.seitz@h-d-gmbh.de>"]
license = "MIT"
repository = "https://github.com/hd-gmbh-dev/quick-microservice-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
envy.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
futures.workspace = true
thiserror.workspace = true
redis.workspace = true
tokio.workspace = true
deadpool-redis.workspace = true
uuid.workspace = true