[package]
name = "qm-role-build"
description = "Role builder from markdown tables"
edition = "2021"
rust-version = "1.75.0"
version.workspace = true
authors = ["Jürgen Seitz <juergen.seitz@h-d-gmbh.de>"]
license = "MIT"
repository = "https://github.com/hd-gmbh-dev/quick-microservice-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
Inflector = "0.11.4"