[package]
name = "qm-role"
description = "Role management"
edition = "2021"
rust-version.workspace = true
version.workspace = true
authors = ["Jürgen Seitz <juergen.seitz@h-d-gmbh.de>"]
license = "MIT"
repository = "https://github.com/hd-gmbh-dev/quick-microservice-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
serde-str = ["serde_with/macros"]

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
async-graphql = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }
serde_with = { workspace = true, optional = true }

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
