[package]
name = "qm-server"
description = "Server helper functions"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum.workspace = true
envy.workspace = true
serde.workspace = true
constcat.workspace = true
async-graphql.workspace = true
async-graphql-axum.workspace = true
qm-role.workspace = true