[package]
name = "qm-server"
description = "Server helper functions"
edition = "2021"
rust-version = "1.75.0"
version.workspace = true
authors = ["Jürgen Seitz <juergen.seitz@h-d-gmbh.de>"]
license = "MIT"
repository = "https://github.com/hd-gmbh-dev/quick-microservice-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum.workspace = true
envy.workspace = true
serde.workspace = true
constcat.workspace = true
async-graphql.workspace = true
async-graphql-axum.workspace = true
qm-role.workspace = true