[package]
name = "qm-utils-derive"
description = "utility functions and macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.7"
quote = "1"
syn = { version = "2.0", features = ["full"] }
lazy_static = { version = "1.4.0", features = [] }
convert_case = "0.6.0"
