[package]
name = "qm-utils-derive"
description = "utility functions and macros"
edition = "2021"
rust-version.workspace = true
version.workspace = true
authors = ["Jürgen Seitz <juergen.seitz@h-d-gmbh.de>"]
license = "MIT"
repository = "https://github.com/hd-gmbh-dev/quick-microservice-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.7"
quote = "1"
syn = { version = "2.0", features = ["full"] }
lazy_static = { version = "1.4.0", features = [] }
convert_case = "0.6.0"
