[package]
name = "qm-example-cli"
version.workspace = true
authors = ["Jürgen Seitz <juergen.seitz@h-d-gmbh.de>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
tokio.workspace = true
qm = { workspace = true, default-features = false, features = [
    "mongodb",
    "redis",
    "kafka",
    "s3",
    "keycloak",
    "server",
    "role",
    "entity",
    "customer",
]}
env_logger = "0.11.0"
clap = { version = "4.4.18", features = ["derive"]}
qm-example-auth = { path = "../auth" }