[package]
name = "qm-example-model"
version = "0.1.0"
authors = ["Jürgen Seitz <juergen.seitz@h-d-gmbh.de>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql.workspace = true
serde.workspace = true
qm = { workspace = true, default-features = false, features = [
    "mongodb",
    "redis",
    "kafka",
    "s3",
    "keycloak",
    "server",
    "role",
    "entity",
    "customer",
]}
