[package]
name = "server"
version = "0.1.0"
authors = ["Jürgen Seitz <juergen.seitz@h-d-gmbh.de>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
qm = { workspace = true, default-features = false, features = [
    "mongodb",
    "redis",
    "kafka",
    "s3",
    "keycloak",
    "server",
    "role",
    "entity",
]}

[build-dependencies]
anyhow.workspace = true
qm-role-build.workspace = true